--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
 		</dependency>
 		
 		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>javax.mail-api</artifactId>
+		    <version>1.6.2</version>
+		</dependency>
+		
+		<dependency>
 		    <groupId>com.google.guava</groupId>
 		    <artifactId>guava</artifactId>
 		    <version>31.1-jre</version>
